# nextjs_django

./: .gitignore  README.md  pyproject.toml
digital_team_prop/: db.sqlite3  manage.py
digital_team_prop/digital_team_prop/: asgi.py  settings.py  urls.py  wsgi.py
digital_team_prop/polls/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
digital_team_prop/polls/migrations/: 0001_initial.py  0002_alter_course_reviews.py
frontend/: package-lock.json  package.json
frontend/app/: initialState.js  layout.js  page.jsx
frontend/app/components/: Course.jsx  Courses.jsx  CreateCourse.jsx  Footer.jsx  Header.jsx  Layout.jsx
frontend/app/components/Course/: page.jsx
frontend/app/components/Courses/: page.jsx
frontend/app/components/CreateCourse/: page.jsx
frontend/app/components/Header/: page.jsx
frontend/app/components/Layout/: page.jsx
frontend/app/context/: AppContext.js
frontend/app/courses/create/: page.jsx
frontend/app/styles/: Course.css  Courses.css  Header.css  NewCourse.css
